--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
 <!-- Content goes here -->
 <p class=logo style="text-align: center; "><a href="https://www.dailyprincetonian.com">THE DAILY PRINCETONIAN</a></p>
 
-<!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
 
-Footer
+
+<!-- Create a div where the graph will take place -->
+<div id="scrollable" ><div id="my_dataviz"></div></div>
+
 </body>
 
 
