--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
     <!-- reference to your CSS -->
     <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="navbar.css" rel="stylesheet" type="text/css"/>
 
     <!-- reference to your JavaScript -->
     <script type="module" src="parse.js" defer></script>
@@ -63,14 +64,35 @@
 
 </head>
 <body>
+  <nav id="top-nav">
+    <span>
+      <a href="https://dailyprincetonian.com">
+        <img class="logo" alt="The Daily Princetonian logo"
+          src="https://dirgyzwl2hnqq.cloudfront.net/8ab5ccf6483af37484451354a9d9e4e3/dist/img/prince_logo_6-20-2020.svg" /></a>
+      <!-- "https://dirgyzwl2hnqq.cloudfront.net/8ab5ccf6483af37484451354a9d9e4e3/dist/img/prince_logo_scrolled.png"  -->
+      <a href="#coverimage" style="text-decoration: none;"><span class="project-name">&ensp;|&ensp;Princeton Scorigami</span>
+    </span></a>
+
+  </nav>
 
 <!-- Content goes here -->
-<p class=logo style="text-align: center; "><a href="https://www.dailyprincetonian.com">THE DAILY PRINCETONIAN</a></p>
 
 
-
+<div style="height: 50px;"></div>
 <!-- Create a div where the graph will take place -->
 <div id="scrollable" ><div id="my_dataviz"></div></div>
+<div class="spacer"></div>
+<div class = "body-text">
+  <div class="overline">PROJECTS</div>
+  <p class="scorigami">We analyzed a century of Princeton football scores. Here's what we found</p>
+  <div class="byline">By Charlie Roth <br><em> Web Development By Vasila Mirshamsova and Yacoub Kahkajian</em></div>
+  <div>
+    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+  </div>
+</div>
+
+
+
 
 </body>
 
