--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
   <div id = "header">
       <div id="scrollable"><div id="my_dataviz"></div></div>
       <div id="tutorial">Scroll horizontally.</div>
+      <div class = "toggle-wrapper">
+        <p class = "counts-label">Show Counts</p>
+        <label class="switch">
+          <input type="checkbox" id="switch">
+          <span class="slider round"></span>
+        </label>
+       
+      </div>
+
+   
       <div class = "headline body-text">
           <div class="overline">PROJECTS</div>
           <p class="scorigami">We analyzed a century of Princeton football scores. Here's what we found.</p>
