--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <!-- ensures mobile layout works-->
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
     <!-- link to our logo for favicon -->
