Added gradient key

--- a/index.html
+++ b/index.html
@@ -83,21 +83,27 @@
         <div class="byline">By Charlie Roth <br><em> Web Development By Vasila Mirshamsova and Yacoub Kahkajian</em>
         </div>
     </div>
-    <div id="tutorial">Scroll horizontally.</div>
+    <div id="tutorial">← Scroll horizontally →</div>
     <div id="grid">
         <div id="yaxis"></div>
         <div id="scrollable">
             <div id="my_dataviz"></div>
         </div>
     </div>
-    <div class="toggle-wrapper">
-        <p class="counts-label">Show Counts</p>
-        <label class="switch">
-            <input type="checkbox" id="switch">
-            <span class="slider round"></span>
-        </label>
-
-    </div>
+        <div class="toggle-wrapper">
+            <div id="showCount">
+                <p class="counts-label">Show Counts</p>
+                <label class="switch">
+                    <input type="checkbox" id="switch">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+            <div class="key">
+                <p><b>1</b></p>
+                <div class="gradient"></div>
+                <p><b>20</b></p>
+            </div>
+        </div>
 
 
 </div>
