--- a/index.html
+++ b/index.html
@@ -116,44 +116,53 @@
     <p>
     <h1>What is Scorigami?</h1>
     </p>
+    <!-- Yay, no errors, warnings, or alerts! -->
+
     <p>
       Inspired by Jon Bois’s <a href="https://www.youtube.com/watch?v=9l5C8cGMueY&feature=emb_title">original</a> <a
         href="https://nflscorigami.com/">project</a> on the history of the NFL, Scorigami charts every unique score in
       Princeton football during the modern era. For the purpose of this project, the “modern era” begins in 1912, when
-      the touchdown was changed from 5 to 6 points, as it is today. Due to the nature of scoring in football, in which
-      it is impossible to score just
+      the touchdown was changed from 5 to 6 points, as it is today. Due to the nature of scoring in football — in which
+      points are most regularly accrued in chunks of two, three, six, and seven — there are many final scores which have
+      never happened. By the end of the 2022 season, Princeton football played 961 games since 1912, 455 (47 percent) of
+      which were score Scorigamis.
     </p>
     <p>
-      For example, in the 2022 season, Princeton beat Lafayette 23-2. That score had never been achieved in the history
-      of Princeton football – it was a Scorigami! These unique scores are actually quite common when playing Lafayette;
-      in the 31 games Princeton has played them, 18 resulted in scores that had never happened before in Princeton’s
-      history. Other common opponents with over half of the games resulting in Scorigamis include Brown, Colgate, and
-      Rutgers. 2022’s 37-10 win over Harvard marked the continuation of a five-year Scorigami streak between the two
-      rivals (all of which Princeton won).
+      For example, in the 2022 season, Princeton beat Lafayette 23-2. Princeton had never played in a game that ended
+      23-2 – it was a Scorigami! These unique scores are actually quite common when playing Lafayette; in the 31 games
+      Princeton has played them, 18 resulted in scores that had never happened before in Princeton’s history. Other
+      common opponents with over half of the games resulting in Scorigamis include Brown, Colgate, and Rutgers. 2022’s
+      37-10 win over Harvard marked the continuation of a five-year Scorigami streak between the two rivals (all of
+      which Princeton won).
     </p>
     <p>
     <h1>Why is this data meaningful?</h1>
     </p>
+    <!-- Yay, no errors, warnings, or alerts! -->
+
     <p>
       Princeton played in the first game in the history of college football on November 6, 1869. Since then, they’ve
-      played over 1300 games against 80 different opponents, winning 28 national championships and a Heisman trophy. As
+      played over 1,300 games against 80 different opponents, winning 28 national championships and a Heisman trophy. As
       Jerry Price, the historian for Princeton Athletics, puts it, “Princeton football is a real source of pride. Its
       history is very storied.”
     </p>
     <p>
-      Since Bob Surace became Princeton’s head football coach in 2010, he has seen 61 scorigamis in his 120 games. He
-      says knows how important the history is to the team and alumni.
+      Since Bob Surace ’90 became Princeton’s head football coach in 2010, he has seen 61 Scorigamis in his 120 games –
+      after his twelfth season, he has the second highest scorigami/season average of all coaches that coached for more
+      than two seasons at 5.08.
     </p>
     <p>
-      “When I meet [a football alum], and it’s very humbling,” Coach Surace said. “I knew the passion of our alumni, and
-      some research they've done. The history goes way back, and I’m quite humbled.”
+      Surace knows how important history is to the team and alumni. “When I meet [a football alum], and it’s very
+      humbling. I knew the passion of our alumni, and some research they've done. The history goes way back, and I’m
+      quite humbled.”
     </p>
-    <p>
     <h1>Where is the data from?</h1>
     </p>
+    <!-- Yay, no errors, warnings, or alerts! -->
+
     <p>
-      The data is pulled and verified using multiple sources: <em>Athletics at Princeton : A History</em> by Frank
-      Presbrey, Bric-a-Bracs, and The Daily Princetonian’s archives
+      The data is pulled and verified using multiple sources: <em>Athletics at Princeton: A History</em> by Frank
+      Presbrey, Bric-a-Bracs, and The Daily Princetonian’s archives.
     </p>
   </div>
 
