--- a/index.html
+++ b/index.html
@@ -9,14 +9,33 @@
         links and social media, so be sure to change this to whatever the
          dominant media will be
     -->
-  <meta property="og:image" content="preview-img.png">
 
-  <!--
-        CHANGE THIS! Make the content something meaningful to the article
-        (reach out to editor for suggestions if needed)
-    -->
-  <meta property=“og:description” content="Inspired by Jon Bois’s project on the history of the NFL, Scorigami charts every unique score in
-Princeton football during the modern era." />
+  <!-- HTML Meta Tags -->
+  <title>Princeton Scorigami</title>
+  <meta name="description" content="Inspired by Jon Bois’s project on the history of the NFL, Scorigami charts every unique score in
+Princeton football during the modern era.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://ananyagrover1.github.io/scorigami/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Princeton Scorigami">
+  <meta property="og:description" content="Inspired by Jon Bois’s project on the history of the NFL, Scorigami charts every unique score in
+Princeton football during the modern era.">
+  <meta property="og:image"
+    content="https://assets.dailyprincetonian.com/projects.dailyprincetonian.com/scorigami/scorigami.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="ananyagrover1.github.io">
+  <meta property="twitter:url" content="https://ananyagrover1.github.io/scorigami/">
+  <meta name="twitter:title" content="Princeton Scorigami">
+  <meta name="twitter:description" content="Inspired by Jon Bois’s project on the history of the NFL, Scorigami charts every unique score in
+Princeton football during the modern era.">
+  <meta name="twitter:image"
+    content="https://assets.dailyprincetonian.com/projects.dailyprincetonian.com/scorigami/scorigami.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
 
   <!-- defines standard character set—useful for ensuring curly quotes
       aren't corrupted by different encodings -->
