--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 
   <!-- HTML Meta Tags -->
   <title>Princeton Scorigami</title>
-  <meta name="description" content="Inspired by Jon Bois’s project on the history of the NFL, Scorigami charts every unique score in
-Princeton football during the modern era.">
+  <meta name="description" content="Inspired by Jon Bois’s project on the history of the NFL, Scorigami charts every unique score in Princeton football during the modern era.">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://ananyagrover1.github.io/scorigami/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Princeton Scorigami">
-  <meta property="og:description" content="Inspired by Jon Bois’s project on the history of the NFL, Scorigami charts every unique score in
-Princeton football during the modern era.">
+  <meta property="og:description" content="Inspired by Jon Bois’s project on the history of the NFL, Scorigami charts every unique score in Princeton football during the modern era.">
   <meta property="og:image"
     content="https://assets.dailyprincetonian.com/projects.dailyprincetonian.com/scorigami/scorigami.png">
 
@@ -29,10 +27,9 @@ Princeton football during the modern era.">
   <meta property="twitter:domain" content="ananyagrover1.github.io">
   <meta property="twitter:url" content="https://ananyagrover1.github.io/scorigami/">
   <meta name="twitter:title" content="Princeton Scorigami">
-  <meta name="twitter:description" content="Inspired by Jon Bois’s project on the history of the NFL, Scorigami charts every unique score in
-Princeton football during the modern era.">
+  <meta name="twitter:description" content="Inspired by Jon Bois’s project on the history of the NFL, Scorigami charts every unique score in Princeton football.">
   <meta name="twitter:image"
-    content="https://assets.dailyprincetonian.com/projects.dailyprincetonian.com/scorigami/scorigami.png">
+  content="https://assets.dailyprincetonian.com/projects.dailyprincetonian.com/scorigami/scorigami.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
